* configure.in (AC_CONFIG_SUBDIRS): added cdemo 	* Makefile.am (DIST_SUBDIRS): ditto 	(ACINCLUDE_M4_LIST): ditto 	* tests/Makefile.am (TESTS): added cdemo-shared.test 	* tests/cdemo-static.test: disable shared libraries here 	* tests/cdemo-shared.test: disable static libraries here 	* doc/libtool.texi (Test descriptions): added cdemo tests 	* THANKS: added Edouard G. Parmelan
1999-01-13  Edouard G. Parmelan  <Edouard.Parmelan@France.NCR.COM>

	* ltmain.in: fix convenience libraries when static libraries
	are disables.
	* cdemo/README, cdemo/Makefile.am, cdemo/configure.in, cdemo/foo.h,
	cdemo/foo1.c, cdemo/main.c, cdemo/.cvsignore, test/cdemo-conf.test,
	test/cdemo-make.test, test/cdemo-exec.test, test/cdemo-static.test:
	new tests for convenience libraries.
	* autogen, Makefile.am, test/Makefile.am: ditto.

	* ltconfig.in, doc/PLATFORMS: Added support for NCR MP-RAS
	(i586-ncr-sysv4.3*) with native compiler.
	* README, doc/libtool.texi: Added note for NCR MP-RAS compiler.

--- a/Makefile.am
+++ b/Makefile.am
@@ -2,7 +2,7 @@
 ## Gordon Matzigkeit <gord@gnu.ai.mit.edu>, 1996
 AUTOMAKE_OPTIONS = gnits
 SUBDIRS = . doc tests $(BUILD_LTDL)
-DIST_SUBDIRS = . doc tests libltdl demo mdemo # depdemo
+DIST_SUBDIRS = . doc tests libltdl demo mdemo cdemo # depdemo
 
 # We need to export these variables when we run ltconfig.
 CFLAGS = @CFLAGS@
@@ -61,9 +61,11 @@ $(srcdir)/ltmain.sh: $(srcdir)/ltmain.in $(top_srcdir)/configure.in
 # We use our own libtool.m4 for these.
 ACINCLUDE_M4_LIST = \
 	$(srcdir)/acinclude.m4 \
-	$(srcdir)/demo/acinclude.m4 \
 	$(srcdir)/libltdl/acinclude.m4 \
-	$(srcdir)/mdemo/acinclude.m4
+	$(srcdir)/demo/acinclude.m4 \
+	$(srcdir)/mdemo/acinclude.m4 \
+	$(srcdir)/cdemo/acinclude.m4 # \ #
+#	$(srcdir)/depdemo/acinclude.m4
 
 # All our rules should depend on these demo files.
 all check: $(ACINCLUDE_M4_LIST) $(LIBTOOL_DEPS)
