--- a/configure.in
+++ b/configure.in
@@ -28,8 +28,7 @@ AC_PROG_LN_S
 dnl For the `lineno' script (which puts line numbers into `ltconfig').
 AC_PROG_AWK
 
-AC_CONFIG_SUBDIRS(libltdl demo mdemo  dnl #depdemo
-)
+AC_CONFIG_SUBDIRS(libltdl demo mdemo cdemo) dnl #depdemo
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
 
 # Local Variables:
