--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1294,6 +1294,14 @@ else
     hardcode_shlibpath_var=no
     ;;
 
+  sysv4.3*)
+    archive_cmds='$LD -G -h $soname -o $lib $libobjs $deplibs'
+    hardcode_direct=no
+    hardcode_minus_L=no
+    hardcode_shlibpath_var=no
+    export_dynamic_flag_spec='-Bexport'
+    ;;
+
   uts4*)
     archive_cmds='$LD -G -h $soname -o $lib $libobjs $deplibs'
     hardcode_libdir_flag_spec='-L$libdir'
