* configure.in (AC_CONFIG_DIRS): configure only libltdl, and then,  	only if --enable-ltdl-install 	(CONF_SUBDIRS): list directories that are configured on demand, 	but that must be included in the distribution 	(ACINCLUDE_M4_LIST, DIST_MAKEFILE_LIST): generated from CONF_SUBDIRS 	* Makefile.am (AUTOMAKE_OPTIONS): added version 1.3e and 	readme-alpha, to handle README-alpha automatically 	(EXTRA_DIST): removed README-alpha 	(BUILD_SUBDIRS): subdirectories that are always built 	(SUBDIRS): BUILD_SUBDIRS plus BUILD_LTDL 	(DIST_SUBDIRS): BUILD_SUBDIRS plus CONF_SUBDIRS, from configure 	(all-local, check-local): depend on $(ACINCLUDE_M4_LIST), from 	configure, and libtool, so that it is built before subdirs 	(configure-subdirs): new target 	(configure-subdirs, distdir): depend on $(DIST_MAKEFILE_LIST), 	from configure 	(@DIST_MAKEFILE_LIST@): create subdir if needed, then run 	configure. 	On-demand configuration of subdirs at distribution time was 	suggested by Gary V. Vaughan <gvaughan@oranda.demon.co.uk>

--- a/configure.in
+++ b/configure.in
@@ -28,7 +28,21 @@ AC_PROG_LN_S
 dnl For the `lineno' script (which puts line numbers into `ltconfig').
 AC_PROG_AWK
 
-AC_CONFIG_SUBDIRS(libltdl demo mdemo cdemo) dnl #depdemo
+dnl all subdirectories that are configured on demand, but that must be
+dnl included in the distribution
+CONF_SUBDIRS="libltdl demo mdemo cdemo" # depdemo
+AC_SUBST(CONF_SUBDIRS)
+
+ACINCLUDE_M4_LIST="\$(srcdir)/acinclude.m4 "
+DIST_MAKEFILE_LIST=
+for dir in $CONF_SUBDIRS; do
+  ACINCLUDE_M4_LIST="$ACINCLUDE_M4_LIST\$(srcdir)/$dir/acinclude.m4 "
+  DIST_MAKEFILE_LIST="$DIST_MAKEFILE_LIST$dir/Makefile "
+done
+AC_SUBST(ACINCLUDE_M4_LIST)
+AC_SUBST(DIST_MAKEFILE_LIST)
+
+AC_CONFIG_SUBDIRS($BUILD_LTDL)
 AC_OUTPUT([Makefile doc/Makefile tests/Makefile])
 
 # Local Variables:
