*** empty log message ***

--- a/libltdl/Makefile.am
+++ b/libltdl/Makefile.am
@@ -12,7 +12,7 @@ LTDL_FLAGS =
 noinst_HEADERS = ltdl.h
 endif
 
-EXTRA_LTLIBRARIES = libltdl.la libtest.la
+EXTRA_LTLIBRARIES = libltdl.la libltdlc.la
 
 lib_LTLIBRARIES = @LIBLIBS@
 noinst_LTLIBRARIES = @NOINSTLIBS@
@@ -22,10 +22,10 @@ libltdl_la_LDFLAGS = $(LTDL_FLAGS)
 libltdl_la_LIBADD = $(LIBADD_DL)
 libltdl_la_DEPENDENCIES = libtool
 
-libtest_la_SOURCES = $(libltdl_la_SOURCES)
-libtest_la_LDFLAGS =
-libtest_la_LIBADD = $(libltdl_la_LIBADD)
-libltdl_la_DEPENDENCIES = libtool
+libltdlc_la_SOURCES = $(libltdl_la_SOURCES)
+libltdlc_la_LDFLAGS =
+libltdlc_la_LIBADD = $(libltdl_la_LIBADD)
+libltdlc_la_DEPENDENCIES = libtool
 
 libtool: ../libtool
 	./config.status --recheck
