--- a/cdemo/configure.in
+++ b/cdemo/configure.in
@@ -6,7 +6,7 @@ AC_PROG_CC
 AC_EXEEXT
 AM_PROG_LIBTOOL
 
-AC_CHECK_HEADERS(string.h math.h)
+AC_CHECK_HEADERS(math.h)
 
 AC_CHECK_LIB(m, cos, LIBADD_M="-lm", LIBADD_M=)
 AC_SUBST(LIBADD_M)
