--- a/ltconfig.in
+++ b/ltconfig.in
@@ -46,6 +46,16 @@ else
   exec "$SHELL" "$0" --no-reexec ${1+"$@"}
 fi
 
+# Find the correct PATH separator.  Usually this is `:', but
+# DJGPP uses `;' like DOS.
+if test "X${PATH_SEPARATOR+set}" != "Xset"; then
+  UNAME=${UNAME-`uname 2>/dev/null`}
+  case X$UNAME in
+    *-DOS) PATH_SEPARATOR=';' ;;
+    *)     PATH_SEPARATOR=':' ;;
+  esac
+fi
+
 # The HP-UX ksh and POSIX shell print the target directory to stdout
 # if CDPATH is set.
 if test "${CDPATH+set}" = set; then CDPATH=; export CDPATH; fi
@@ -70,7 +80,7 @@ if test "X`($echo '\t') 2>/dev/null`" != 'X\t' ||
   #
   # So, first we look for a working echo in the user's PATH.
 
-  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}:"
+  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}${PATH_SEPARATOR}"
   for dir in $PATH /usr/ucb; do
     if test -f $dir/echo &&
        test "X`($dir/echo '\t') 2>/dev/null`" = 'X\t' &&
@@ -434,7 +444,7 @@ if test "${RANLIB+set}" != "set"; then
   result=no
 
   echo $ac_n "checking for ranlib... $ac_c" 1>&6
-  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}:"
+  IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}${PATH_SEPARATOR}"
   for dir in $PATH; do
     test -z "$dir" && dir=.
     if test -f $dir/ranlib; then
@@ -462,7 +472,7 @@ if test "$with_gcc" != yes || test -z "$CC"; then
   # If CC is not set, then try to find GCC or a usable CC.
   if test -z "$CC"; then
     echo $ac_n "checking for gcc... $ac_c" 1>&6
-    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}:"
+    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}${PATH_SEPARATOR}"
     for dir in $PATH; do
       IFS="$save_ifs"
       test -z "$dir" && dir=.
@@ -483,7 +493,7 @@ if test "$with_gcc" != yes || test -z "$CC"; then
   # Not "gcc", so try "cc", rejecting "/usr/ucb/cc".
   if test -z "$CC"; then
     echo $ac_n "checking for cc... $ac_c" 1>&6
-    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}:"
+    IFS="${IFS= 	}"; save_ifs="$IFS"; IFS="${IFS}${PATH_SEPARATOR}"
     cc_rejected=no
     for dir in $PATH; do
       test -z "$dir" && dir=.
@@ -924,7 +934,7 @@ if test -z "$LD"; then
   fi
 
   if test -z "$LD"; then
-    IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}:"
+    IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}${PATH_SEPARATOR}"
     for ac_dir in $PATH; do
       test -z "$ac_dir" && ac_dir=.
       if test -f "$ac_dir/$ac_prog"; then
@@ -1331,7 +1341,7 @@ if test -z "$NM"; then
   case "$NM" in
   /* | [A-Za-z]:[/\\]*) ;; # Let the user override the test with a path.
   *)
-    IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}:"
+    IFS="${IFS= 	}"; ac_save_ifs="$IFS"; IFS="${IFS}${PATH_SEPARATOR}"
     for ac_dir in $PATH /usr/ucb /usr/ccs/bin /bin; do
       test -z "$ac_dir" && ac_dir=.
       if test -f $ac_dir/nm; then
