--- a/ltmain.in
+++ b/ltmain.in
@@ -1241,7 +1241,7 @@ compiler."
 	  $echo "$help" 1>&2
 	  exit 1
 	fi
-	if test "$need_lib_prefix" = yes; then
+	if test "$need_lib_prefix" != no; then
 	  # Add the "lib" prefix for modules if required
 	  name=`$echo "X$outputname" | $Xsed -e 's/\.la$//'`
 	  eval libname=\"$libname_spec\"
@@ -1425,13 +1425,12 @@ compiler."
 	# Clear the version info if we defaulted, and they specified a release.
 	if test -z "$vinfo" && test -n "$release"; then
 	  major=
-	  versuffix=
 	  verstring="0.0"
-	  case "$host" in
-	  *-*-sunos*)
+	  if test "$need_version" = no; then
+	    versuffix=
+	  else
 	    versuffix=".0.0"
-	    ;;
-	  esac
+	  fi
 	fi
 
 	# Remove version info from name if versioning should be avoided
@@ -1641,7 +1640,7 @@ EOF
 	    fi
 	  done # Gone through all deplibs.
 	  ;;
-	none | *)  deplibs="" ;;
+	none | unknown | *)  deplibs="" ;;
 	esac
 	versuffix=$versuffix_save
 	major=$major_save
