* ltmain.in (dlpredeps): append dependencies from dlopened modules 	(but not dlpreopened ones) after all explicitly linked libraries

--- a/ltmain.in
+++ b/ltmain.in
@@ -616,6 +616,7 @@ compiler."
     avoid_versioning=no
     dlfiles=
     dlprefiles=
+    dlpredeps=
     export_dynamic=no
     export_symbols=
     generated=
@@ -977,8 +978,7 @@ compiler."
 	  else
 	    # We should not create a dependency on this library, but we
 	    # may need any libraries it requires.
-	    compile_command="$compile_command$dependency_libs"
-	    finalize_command="$finalize_command$dependency_libs"
+	    dlpredeps="$dlpredeps$dependency_libs"
 	    prev=
 	    continue
 	  fi
@@ -2040,6 +2040,10 @@ lt_preloaded_symbols[] =
 	compile_command=`$echo "X$compile_command" | $Xsed -e 's%@OUTPUT@%'"$output"'%g'`
 	finalize_command=`$echo "X$finalize_command" | $Xsed -e 's%@OUTPUT@%'"$output"'%g'`
 
+	# Append dependencies from dlopened modules
+	compile_command="$compile_command$dlpredeps"
+	finalize_command="$finalize_command$dlpredeps"
+
 	# We have no uninstalled library dependencies, so finalize right now.
 	$show "$compile_command"
 	$run eval "$compile_command"
@@ -2049,6 +2053,10 @@ lt_preloaded_symbols[] =
       # Replace the output file specification.
       compile_command=`$echo "X$compile_command" | $Xsed -e 's%@OUTPUT@%'"$output_objdir/$outputname"'%g'`
       finalize_command=`$echo "X$finalize_command" | $Xsed -e 's%@OUTPUT@%'"$output_objdir/$outputname"'T%g'`
+
+      # Append dependencies from dlopened modules
+      compile_command="$compile_command$dlpredeps"
+      finalize_command="$finalize_command$dlpredeps"
 
       # Create the binary in the object directory, then wrap it.
       if test ! -d $output_objdir; then
