* libtool.m4 (LIBTOOL_DEPS): set it 	* libltdl/configure.in (LIBTOOL_DEPS): AC_SUBST it 	* libltdl/Makefile.am (libtool): use it 	* doc/libtool.texi (AM_PROG_LIBTOOL): document it

--- a/libltdl/configure.in
+++ b/libltdl/configure.in
@@ -20,6 +20,7 @@ AC_SUBST(NOINSTLIBS)
 
 AC_PROG_CC
 AM_PROG_LIBTOOL
+AC_SUBST(LIBTOOL_DEPS)
 
 AC_CACHE_CHECK([which variable specifies run-time library path],
   libltdl_cv_shlibpath_var, [dnl
