* mdemo/Makefile.am (mdemo_LDFLAGS, mdemo_LDADD): moved -dlopen 	flags to LDADD 	* doc/libtool.texi (Using Automake): how to add -dlopen to LDADD

--- a/mdemo/Makefile.am
+++ b/mdemo/Makefile.am
@@ -24,14 +24,14 @@ bin_PROGRAMS = mdemo mdemo.debug
 
 # Create a version of mdemo that does dlopen.
 mdemo_SOURCES = main.c
-mdemo_LDADD = ../libltdl/libltdlc.la
-mdemo_LDFLAGS = -dlopen foo1.la -dlopen libfoo2.la \
-	-export-dynamic ## FIXME: remove this when libtool and libltdl
+mdemo_LDFLAGS = -export-dynamic ## FIXME: remove this when libtool and libltdl
 ## handle dependencies of modules
+## The quotes around -dlopen below fool automake into accepting it
+mdemo_LDADD = ../libltdl/libltdlc.la "-dlopen" foo1.la "-dlopen" libfoo2.la
 mdemo_DEPENDENCIES = ../libltdl/libltdlc.la foo1.la libfoo2.la
 
 # Create an easier-to-debug version of mdemo.
 mdemo_debug_SOURCES = $(mdemo_SOURCES)
-mdemo_debug_LDADD = $(mdemo_LDADD)
 mdemo_debug_LDFLAGS = -static $(mdemo_LDFLAGS)
+mdemo_debug_LDADD = $(mdemo_LDADD)
 mdemo_debug_DEPENDENCIES = $(mdemo_DEPENDENCIES)
