* ltconfig.in (global_symbol_pipe): #define const to nothing if 	not __STDC__

--- a/ltconfig.in
+++ b/ltconfig.in
@@ -1492,6 +1492,7 @@ EOF
 # define lt_ptr_t void *
 #else
 # define lt_ptr_t char *
+# define const
 #endif
 
 /* The mapping between symbol names and symbols. */
